# Qt-Advanced-Docking-System

./: CMakeLists.txt
examples/autohidedragndrop/: mainwindow.cpp
src/: AutoHideDockContainer.cpp  AutoHideTab.cpp  CMakeLists.txt  DockAreaTitleBar.cpp  DockAreaWidget.cpp  DockAreaWidget.h  DockContainerWidget.cpp  DockFocusController.cpp  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockWidget.cpp  DockWidget.h  DockWidgetTab.cpp  DockWidgetTab.h  FloatingDockContainer.cpp  FloatingDragPreview.cpp  ads_globals.cpp  ads_globals.h
src/linux/: FloatingWidgetTitleBar.cpp
